bindings/php/revault_ffi.h

typedef unsigned char bool;
typedef unsigned char uint8_t;
typedef unsigned long uint64_t;
typedef unsigned long size_t;
typedef struct { uint8_t *ptr; size_t len; } RevaultBuffer;
bool vault_directory_store_contact_signing_key(const void *handle, const char *name, size_t name_len, const void *key);
void *vault_directory_load_contact_signing_key(const void *handle, const char *name, size_t name_len);
RevaultBuffer vault_directory_list_profile_generations(const void *handle, const char *name, size_t name_len);
RevaultBuffer vault_directory_rotate_private_key(const void *handle, const char *name, size_t name_len);
bool vault_directory_remember_lockbox(const void *handle, const uint8_t *id, size_t id_len, const char *path, size_t path_len);
RevaultBuffer vault_directory_list_known_lockboxes(const void *handle);
bool vault_directory_forget_lockbox(const void *handle, const char *path, size_t path_len);
bool vault_directory_remember_access_slot_label(const void *handle, const uint8_t *id, size_t id_len, uint64_t slot_id, const char *name, size_t name_len);
RevaultBuffer vault_directory_list_access_slot_labels(const void *handle, const uint8_t *id, size_t id_len);
RevaultBuffer vault_directory_find_access_slot_labels(const void *handle, const uint8_t *id, size_t id_len, const char *name, size_t name_len);
bool vault_directory_forget_access_slot_label(const void *handle, const uint8_t *id, size_t id_len, uint64_t slot_id);
RevaultBuffer vault_directory_define_form(const void *handle, const char *alias, size_t alias_len, const char *name, size_t name_len, const char *description, size_t description_len, const uint8_t *fields_flatbuffer, size_t fields_len);
RevaultBuffer vault_directory_resolve_form(const void *handle, const char *reference, size_t reference_len);
RevaultBuffer vault_directory_list_forms(const void *handle);
RevaultBuffer vault_directory_list_form_revisions(const void *handle, const char *type_id, size_t type_id_len);
size_t vault_directory_seed_forms(const void *handle);
bool vault_directory_remember_password(const void *handle, const uint8_t *id, size_t id_len, const uint8_t *password, size_t password_len);
RevaultBuffer vault_directory_remembered_password(const void *handle, const uint8_t *id, size_t id_len);
RevaultBuffer vault_backup_default(const char *path, size_t path_len, bool overwrite);
RevaultBuffer vault_restore_default(const char *path, size_t path_len, bool overwrite);
void vault_directory_free(void *handle);
void *vault_read_only_open(const char *root, size_t root_len, const uint8_t *password, size_t password_len);
void *vault_read_only_open_default(const uint8_t *password, size_t password_len);
RevaultBuffer vault_read_only_list_profile_names(const void *handle);
RevaultBuffer vault_read_only_list_contact_names(const void *handle);
RevaultBuffer vault_read_only_list_form_aliases(const void *handle);
RevaultBuffer vault_read_only_list_known_lockboxes(const void *handle);
void vault_read_only_free(void *handle);
bool vault_agent_serve(void);
bool vault_agent_verify_transport(void);
RevaultBuffer vault_agent_get(const uint8_t *id, size_t id_len);
bool vault_agent_put(const uint8_t *id, size_t id_len, const uint8_t *key, size_t key_len);
bool vault_agent_forget(const uint8_t *id, size_t id_len);
bool vault_agent_stop(void);
bool vault_agent_start(void);
RevaultBuffer vault_agent_list(void);
RevaultBuffer vault_agent_sleep_support(void);
RevaultBuffer vault_platform_status(void);
bool vault_platform_set_scope(const char *scope, size_t len);
bool vault_platform_forget_password(void);
bool vault_platform_put_password(const uint8_t *password, size_t len);
bool vault_platform_enable(void);
bool vault_platform_disable(void);
bool vault_platform_disabled(void);
RevaultBuffer vault_platform_get_password(void);
RevaultBuffer vault_default_directory(void);
RevaultBuffer vault_default_path(void);
RevaultBuffer vault_agent_log_path(void);
RevaultBuffer vault_agent_log_destination(void);
RevaultBuffer vault_agent_get_vault_unlock_key(const char *vault_id, size_t vault_id_len);
bool vault_agent_put_vault_unlock_key(const char *vault_id, size_t vault_id_len, const uint8_t *key, size_t key_len, uint64_t ttl_seconds);
bool vault_agent_forget_vault_unlock_key(const char *vault_id, size_t vault_id_len);
void *vault_agent_get_owner_signing_key(const char *vault_id, size_t vault_len, const char *profile, size_t profile_len);
bool vault_agent_put_owner_signing_key(const char *vault_id, size_t vault_len, const char *profile, size_t profile_len, const void *key, uint64_t ttl_seconds);
bool vault_agent_forget_owner_signing_key(const char *vault_id, size_t vault_len, const char *profile, size_t profile_len);
void *vault_agent_begin_activity(const char *kind, size_t len);
void vault_agent_end_activity(void *handle);
void *vault_local(void);
void *vault_create_lockbox_password(const void *vault, const char *path, size_t path_len, const uint8_t *password, size_t password_len);
void *vault_open_lockbox_password(const void *vault, const char *path, size_t path_len, const uint8_t *password, size_t password_len);
void *vault_create_lockbox_content_key(const void *vault, const char *path, size_t path_len, const uint8_t *content_key, size_t key_len, const void *signing_key);
void *vault_create_lockbox_contact(const void *vault, const char *path, size_t path_len, const void *contact, const char *name, size_t name_len, const void *signing_key);
void *vault_open_lockbox_content_key(const void *vault, const char *path, size_t path_len, const uint8_t *content_key, size_t key_len, const void *signing_key);
bool vault_cache_lockbox_password(const void *vault, const char *path, size_t path_len, const uint8_t *password, size_t password_len, uint64_t ttl_seconds);
bool vault_close_lockbox(const void *vault, const char *path, size_t path_len);
bool vault_close_all(const void *vault);
void vault_free(void *vault);