bindings/python/revault_api/_revault_native.py

    library.vault_directory_store_contact_signing_key.restype = ctypes.c_bool
    library.vault_directory_load_contact_signing_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_load_contact_signing_key.restype = ctypes.c_void_p
    library.vault_directory_list_profile_generations.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_list_profile_generations.restype = buffer_type
    library.vault_directory_rotate_private_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_rotate_private_key.restype = buffer_type
    library.vault_directory_remember_lockbox.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_remember_lockbox.restype = ctypes.c_bool
    library.vault_directory_list_known_lockboxes.argtypes = [ctypes.c_void_p]
    library.vault_directory_list_known_lockboxes.restype = buffer_type
    library.vault_directory_forget_lockbox.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_forget_lockbox.restype = ctypes.c_bool
    library.vault_directory_remember_access_slot_label.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_remember_access_slot_label.restype = ctypes.c_bool
    library.vault_directory_list_access_slot_labels.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_list_access_slot_labels.restype = buffer_type
    library.vault_directory_find_access_slot_labels.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_find_access_slot_labels.restype = buffer_type
    library.vault_directory_forget_access_slot_label.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64]
    library.vault_directory_forget_access_slot_label.restype = ctypes.c_bool
    library.vault_directory_define_form.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_define_form.restype = buffer_type
    library.vault_directory_resolve_form.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_resolve_form.restype = buffer_type
    library.vault_directory_list_forms.argtypes = [ctypes.c_void_p]
    library.vault_directory_list_forms.restype = buffer_type
    library.vault_directory_list_form_revisions.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_list_form_revisions.restype = buffer_type
    library.vault_directory_seed_forms.argtypes = [ctypes.c_void_p]
    library.vault_directory_seed_forms.restype = ctypes.c_size_t
    library.vault_directory_remember_password.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_remember_password.restype = ctypes.c_bool
    library.vault_directory_remembered_password.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_remembered_password.restype = buffer_type
    library.vault_backup_default.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool]
    library.vault_backup_default.restype = buffer_type
    library.vault_restore_default.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool]
    library.vault_restore_default.restype = buffer_type
    library.vault_directory_free.argtypes = [ctypes.c_void_p]
    library.vault_directory_free.restype = None
    library.vault_read_only_open.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_read_only_open.restype = ctypes.c_void_p
    library.vault_read_only_open_default.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_read_only_open_default.restype = ctypes.c_void_p
    library.vault_read_only_list_profile_names.argtypes = [ctypes.c_void_p]
    library.vault_read_only_list_profile_names.restype = buffer_type
    library.vault_read_only_list_contact_names.argtypes = [ctypes.c_void_p]
    library.vault_read_only_list_contact_names.restype = buffer_type
    library.vault_read_only_list_form_aliases.argtypes = [ctypes.c_void_p]
    library.vault_read_only_list_form_aliases.restype = buffer_type
    library.vault_read_only_list_known_lockboxes.argtypes = [ctypes.c_void_p]
    library.vault_read_only_list_known_lockboxes.restype = buffer_type
    library.vault_read_only_free.argtypes = [ctypes.c_void_p]
    library.vault_read_only_free.restype = None
    library.vault_agent_serve.argtypes = []
    library.vault_agent_serve.restype = ctypes.c_bool
    library.vault_agent_verify_transport.argtypes = []
    library.vault_agent_verify_transport.restype = ctypes.c_bool
    library.vault_agent_get.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_agent_get.restype = buffer_type
    library.vault_agent_put.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_agent_put.restype = ctypes.c_bool
    library.vault_agent_forget.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_agent_forget.restype = ctypes.c_bool
    library.vault_agent_stop.argtypes = []
    library.vault_agent_stop.restype = ctypes.c_bool
    library.vault_agent_start.argtypes = []
    library.vault_agent_start.restype = ctypes.c_bool
    library.vault_agent_list.argtypes = []
    library.vault_agent_list.restype = buffer_type
    library.vault_agent_sleep_support.argtypes = []
    library.vault_agent_sleep_support.restype = buffer_type
    library.vault_platform_status.argtypes = []
    library.vault_platform_status.restype = buffer_type
    library.vault_platform_set_scope.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_platform_set_scope.restype = ctypes.c_bool
    library.vault_platform_forget_password.argtypes = []
    library.vault_platform_forget_password.restype = ctypes.c_bool
    library.vault_platform_put_password.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_platform_put_password.restype = ctypes.c_bool
    library.vault_platform_enable.argtypes = []
    library.vault_platform_enable.restype = ctypes.c_bool
    library.vault_platform_disable.argtypes = []
    library.vault_platform_disable.restype = ctypes.c_bool
    library.vault_platform_disabled.argtypes = []
    library.vault_platform_disabled.restype = ctypes.c_bool
    library.vault_platform_get_password.argtypes = []
    library.vault_platform_get_password.restype = buffer_type
    library.vault_default_directory.argtypes = []
    library.vault_default_directory.restype = buffer_type
    library.vault_default_path.argtypes = []
    library.vault_default_path.restype = buffer_type
    library.vault_agent_log_path.argtypes = []
    library.vault_agent_log_path.restype = buffer_type
    library.vault_agent_log_destination.argtypes = []
    library.vault_agent_log_destination.restype = buffer_type
    library.vault_agent_get_vault_unlock_key.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_agent_get_vault_unlock_key.restype = buffer_type
    library.vault_agent_put_vault_unlock_key.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64]
    library.vault_agent_put_vault_unlock_key.restype = ctypes.c_bool
    library.vault_agent_forget_vault_unlock_key.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_agent_forget_vault_unlock_key.restype = ctypes.c_bool
    library.vault_agent_get_owner_signing_key.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_agent_get_owner_signing_key.restype = ctypes.c_void_p
    library.vault_agent_put_owner_signing_key.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_uint64]
    library.vault_agent_put_owner_signing_key.restype = ctypes.c_bool
    library.vault_agent_forget_owner_signing_key.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_agent_forget_owner_signing_key.restype = ctypes.c_bool
    library.vault_agent_begin_activity.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_agent_begin_activity.restype = ctypes.c_void_p
    library.vault_agent_end_activity.argtypes = [ctypes.c_void_p]
    library.vault_agent_end_activity.restype = None
    library.vault_local.argtypes = []
    library.vault_local.restype = ctypes.c_void_p
    library.vault_create_lockbox_password.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_create_lockbox_password.restype = ctypes.c_void_p
    library.vault_open_lockbox_password.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_open_lockbox_password.restype = ctypes.c_void_p
    library.vault_create_lockbox_content_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
    library.vault_create_lockbox_content_key.restype = ctypes.c_void_p
    library.vault_create_lockbox_contact.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
    library.vault_create_lockbox_contact.restype = ctypes.c_void_p
    library.vault_open_lockbox_content_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
    library.vault_open_lockbox_content_key.restype = ctypes.c_void_p
    library.vault_cache_lockbox_password.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64]
    library.vault_cache_lockbox_password.restype = ctypes.c_bool
    library.vault_close_lockbox.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_close_lockbox.restype = ctypes.c_bool
    library.vault_close_all.argtypes = [ctypes.c_void_p]
    library.vault_close_all.restype = ctypes.c_bool
    library.vault_free.argtypes = [ctypes.c_void_p]
    library.vault_free.restype = None
